# corvus

./: CMakeLists.txt  README  TODO
base/: Core.php  PDO.php  Reflection.php  SPL.php  curl.php  date.php  dom.php  fileinfo.php  http.php  json.php  mcrypt.php  mysqli.php  openssl.php  readline.php  session.php  snmp.php  soap.php  sockets.php
cmake/modules/: FindLLVM.cmake
compiler/: CMakeLists.txt
compiler/IR/: pCompileAndLinkTarget.cpp  pIRHelper.cpp
compiler/analysis/: CMakeLists.txt  pAST.cpp  pBaseTransformer.cpp  pBaseVisitor.cpp  pLexer.cpp  pModel.cpp  pModelScope.cpp  pParseContext.cpp  pParser.cpp  pPass.cpp  pPassManager.cpp  pSourceFile.cpp  pSourceManager.cpp  pSourceModule.cpp
compiler/analysis/grammar_src/: corvus_grammar.y
compiler/analysis/lexer_src/: corvus-lexer-gen.cpp
compiler/analysis/passes/: CheckMemoryManagement.cpp  DumpAST.cpp  DumpStats.cpp  ModelBuilder.cpp  ModelChecker.cpp  PrintAST.cpp  Trivial.cpp
corvus/: CMakeLists.txt  astNodes.def  pAST.cpp  pAST.h  pBaseTransformer.cpp  pBaseVisitor.cpp  pBaseVisitor.h  pClassGraph.cpp  pClassGraph.h  pClassModelBuilder.cpp  pClassModelBuilder.h  pConfig.cpp  pConfig.h  pDB.cpp  pDB.h  pDiagnostic.cpp  pDiagnostic.h  pFullModelChecker.cpp  pFullModelChecker.h  pLexer.cpp  pLexer.h  pModel.cpp  pModel.h  pNSVisitor.cpp  pNSVisitor.h  pNamespace.h  pParseContext.cpp  pParseContext.h  pParseError.h  pParser.cpp  pParser.h  pPass.cpp  pPass.h  pPassManager.cpp  pSourceFile.cpp  pSourceFile.h  pSourceLoc.cpp  pSourceLoc.h  pSourceManager.cpp  pSourceManager.h  (+3 more)
corvus/grammar_src/: corvus_grammar.y
corvus/lexer_src/: corvus-lexer-gen.cpp
corvus/passes/: DumpStats.cpp  DumpStats.h  ModelBuilder.cpp  ModelBuilder.h  ModelChecker.cpp  ModelChecker.h  PrintAST.cpp  PrintAST.h  Trivial.cpp  Trivial.h  TypeAnalysis.cpp  TypeAnalysis.h
db/: basic.php  mysql.php  pcre.php  sqlite3.php  ssh2.php  standard.php  xml.php  zip.php  zlib.php
frontend/: CMakeLists.txt  corvus.cpp
frontend/cli/: CMakeLists.txt  corvus-analyzer.cpp  rphp-analyzer.cpp
include/corvus/: pConfig.h  pSourceTypes.h  pTarget.h  pTargetError.h  pTypes.h
include/corvus/IR/: pCodeGen.h  pCompileAndLinkTarget.h  pCompileError.h  pCompileTarget.h  pDeclare.h  pDumpTarget.h  pGenSupport.h  pGenerator.h  pIRHelper.h  pLibTargets.h  pLinkTarget.h  pStandAloneTargets.h
include/corvus/JIT/: pCachedJIT.h  pInterpretTarget.h  pJITTarget.h
include/corvus/analysis/: astNodes.def  pAST.h  pBaseTransformer.h  pBaseVisitor.h  pLexer.h  pModel.h  pModelScope.h  pParseContext.h  pParseError.h  pParser.h  pPass.h  pPassManager.h  pSourceFile.h  pSourceManager.h  pSourceModule.h  pTempVar.h  pTransformHelper.h
include/corvus/analysis/passes/: CheckMemoryManagement.h  Desugar.h  DumpAST.h  DumpStats.h  Early_Lower_Loops.h  Lower_Binary_Op.h  Lower_Conditional_Expr.h  Lower_Control_Flow.h  MainFunction.h  ModelBuilder.h  (+5 more)
include/corvus/runtime/: CowPtr.h  pClassManager.h  pErrorManager.h  pExtBase.h  pExtManager.h  pFunction.h  pFunctionManager.h  pHash.h  pObject.h  pOutputBuffer.h  pOutputManager.h  pResource.h  pRuntimeEngine.h  pRuntimeError.h  pRuntimeTypes.h  pSupport.h  pTypeOperators.h  pUString.h  pVar.h  pVarOperators.h
include/rphp/analysis/: pPassManager.h
lib/: c-runtime.bc
test/: CMakeLists.txt  driver.cpp  test1.php  test2.php
(+1 files in other folders)
